# gooser

./: README.md
modbus_rtu_agent/: Cargo.toml  settings.toml
modbus_rtu_agent/src/: main.rs
server/: Cargo.toml  system
server/client/: package-lock.json  package.json  test.html
server/client/pages/: dashboard.html  dashboards.html  devices.html  geomaps.html  history.html  index.html  login.html
server/client/public/css/: gooser.css
server/client/public/js/: dashboard.js  dashboards.js  devices.js  geomaps.js  history.js  index.js  login.js
server/src/: auth.rs  db.rs  main.rs
server/src/auth/: user.rs
