[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1"
serde = "1"
serde_derive = "1"
chrono = "0.4"
splitmut = "*"
regex = "1.7.1"
# sqlite = "*"
sql-builder = "3"
bytes = "1"